gw-testnet/web3-nginx/gw-testnet-web3-nginx-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: gw-testnet-web3-nginx-svc
  namespace: gw-testnet
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30160
  selector:
    app: gw-testnet-web3-nginx
  type: NodePort
